[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Alexander Stekelenburg <anoniem.axander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
superluminal-perf = "0.1.1"
mimalloc = {version = "0.1.27", default-features = false}
